--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    
 }
 h1{
     font-size: 30px;
@@ -13,6 +15,33 @@ h1{
     margin-left: 5%;
     padding-left: 2%;
 }
+.half-width p{
+    text-align: justify;
+    font-size: 12px;
+    color: gray;
+}
 .half-width img{
     width: 100%;
+}
+.top-section{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+
+}
+section{
+    height: 500px;
+
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon,tomato);
+    padding: 5px 10px;
+    border-radius: 06px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
